--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">要email干嘛</a>
+											<a href="byin@clarku.edu">要email干嘛</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
 											<span>110你信不信</span>
 										</li>
 										<li>
-											<h3>Social， 都不好使，别点了</h3>
+											<h3>以下功能都不好使，别点了</h3>
 											<ul class="icons">
 												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
