--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href=mailto:"byin@clarku.edu">要email干嘛</a>
+											<a href=mailto:byin@clarku.edu>要email干嘛</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
